--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <textarea id="message" name="message">Assignment done</textarea>
 
                 <p>Would you like to visit the starfish?</p>
-                <label><input type="radio" name="visit" value="yes"> Yes</label>
+                <input type="radio" name="visit" value="yes">
                 <label><input type="radio" name="visit" value="no"> No</label>
                 <label><input type="radio" name="visit" value="maybe"> Maybe</label>
 
