--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lone Starfish</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <img src="images/lone-starfish.jpg" alt="Starfish in sand" />
-    <h1>Lone Starfish</h1>
+  <div class="container">
+    <header>
+      <img src="images/lone-starfish-wide.jpg" alt="Lone Starfish">
+      <h1>Lone Starfish</h1>
+    </header>
+
     <nav>
       <ul>
         <li><a href="#">HOME</a></li>
@@ -17,52 +20,60 @@
         <li><a href="#">CONTACT</a></li>
       </ul>
     </nav>
-  </header>
 
-  <main>
-    <section class="article-box">
-      <h2>Life of a Starfish</h2>
-      <img src="images/lone-starfish.jpg" alt="Starfish" class="float-image"/>
-      <p>
-        Swallower catla Black angelfish grunter striped bass scissor-tail rasbora... (continue rest from content.txt)
-      </p>
-    </section>
+    <main>
+      <article>
+        <h2>Life of a Starfish</h2>
+        <img src="images/lone-starfish.jpg" alt="Starfish" class="float-left">
+        <p>
+          Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola.
+          Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder."
+          Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard.
+          Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish...
+        </p>
+      </article>
 
-    <section class="facts-box">
-      <h3>Facts About Starfish</h3>
-      <ul>
-        <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
-        <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
-        <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
-        <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
-      </ul>
-    </section>
+      <section>
+        <h3>Facts About Starfish</h3>
+        
+        <ul>
+          <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+          <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+          <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+        </ul>
+      </section>
 
-    <section class="form-box">
-      <h3>Contact to learn more</h3>
-      <form>
-        <label for="name">Your Name</label>
-        <input type="text" id="name" name="name"/>
+      <section>
+        <h4>Contact to Learn More</h4>
+        <form>
+          <label for="name">Your Name</label>
+          <input type="text" id="name" name="name" required>
 
-        <label for="email">Your Email</label>
-        <input type="email" id="email" name="email"/>
+          <label for="email">Your Email</label>
+          <input type="email" id="email" name="email" required>
 
-        <label for="message">Your Message</label>
-        <textarea id="message" name="message">midterm mockup</textarea>
+          <label for="message">Your Message</label>
+          <textarea id="message" name="message" rows="4"></textarea>
 
-        <p>Would you like to visit the starfish?</p>
-        <label><input type="radio" name="visit" value="yes"/> Yes</label>
-        <label><input type="radio" name="visit" value="no"/> No</label>
-        <label><input type="radio" name="visit" value="maybe"/> Maybe</label>
 
-        <br /><br />
-        <input type="submit" value="SEND" />
-      </form>
-    </section>
-  </main>
+   <p class="visit-label">Would you like to visit the starfish?</p>
+<div class="radio-row">
+  <label>Yes <input type="radio" name="visit" value="yes"></label>
+  <label>No <input type="radio" name="visit" value="no"></label>
+  <label>May be <input type="radio" name="visit" value="may be"></label>
+</div>
 
-  <footer>
-    <p>© Lone Starfish.</p>
-  </footer>
+
+
+          <button type="submit">Send</button>
+        </form>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; Lone Starfish</p>
+
+    </footer>
+  </div>
 </body>
 </html>
