--- a/index.html
+++ b/index.html
@@ -18,71 +18,65 @@
     </header>
 
     <!-- Inner content with padding -->
- <nav>
-  <ul class="nav-links">
-    <li><a href="#">HOME</a></li>
-    <li class="divider">|</li>
-    <li><a href="#">STORY</a></li>
-    <li class="divider">|</li>
-    <li><a href="#">CONTACT</a></li>
-  </ul>
-</nav>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="#">HOME</a></li>
+        <li class="divider">|</li>
+        <li><a href="#">STORY</a></li>
+        <li class="divider">|</li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
+    </nav>
 
+    <!-- Main content -->
+    <main>
+      <article>
+        <h2>Life of a Starfish</h2>
+        <img src="images/lone-starfish.jpg" alt="Starfish" class="float-left" />
+        <p>
+          Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder. Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, lionfish; longfin smelt; leopard danio dragonfish, Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback fish cod scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.
+        </p>
+      </article>
 
-      <!-- Main content -->
-      <main>
-        <article>
-          <h2>Life of a Starfish</h2>
-          <img src="images/lone-starfish.jpg" alt="Starfish" class="float-left" />
-          <p>
-           Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback fish cod scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.
+      <section>
+        <h3>Facts About Starfish</h3>
+        <ul>
+          <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+          <li>Waryfish, lionfish; longfin smelt; leopard danio dragonfish, Lost River sucker, mojarra.</li>
+          <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+          <li>Waryfish, lionfish; longfin smelt; leopard danio dragonfish, Lost River sucker, mojarra.</li>
+        </ul>
+      </section>
 
+      <section>
+        <h4>Contact to Learn more</h4>
+        <form>
+          <label for="name">Your Name</label>
+          <input type="text" id="name" name="name">
 
-          </p>
-        </article>
+          <label for="email">Your Email</label>
+          <input type="email" id="email" name="email">
 
-        <section>
-          <h3>Facts About Starfish</h3>
-          <ul>
-            <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
-            <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
-            <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy. </li>
-            <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
-          </ul>
-        </section>
+          <label for="message">Your Message</label>
+          <textarea id="message" name="message" rows="4"></textarea>
 
-        <section>
-          <h4>Contact to Learn more</h4>
-         <form>
-  <label for="name">Your Name</label>
-  <input type="text" id="name" name="name">
+          <p class="radio-label">Would you like to visit the starfish?</p>
 
-  <label for="email">Your Email</label>
-  <input type="email" id="email" name="email">
+          <div class="radio-row">
+            <label>Yes <input type="radio" name="response" value="yes"></label>
+            <label>No <input type="radio" name="response" value="no"></label>
+            <label>Maybe <input type="radio" name="response" value="maybe"></label>
+          </div>
 
-  <label for="message">Your Message</label>
-  <textarea id="message" name="message" rows="4"></textarea>
+          <button type="submit">SEND</button>
+        </form>
+      </section>
+    </main>
 
-  <label class="radio-label">Would you like to visit the starfish?</label>
-  
-<div class="radio-row">
-  <label>Yes <input type="radio" name="response" value="yes"></label>
-  <label>No <input type="radio" name="response" value="no"></label>
-  <label>Maybe <input type="radio" name="response" value="maybe"></label>
-</div>
+    <footer>
+      <p>&copy; Lone Starfish.</p>
+    </footer>
 
-
-  <button type="submit">SEND</button>
-</form>
-
-        </section>
-      </main>
-
-      <footer>
-        <p>&copy; Lone Starfish.</p>
-      </footer>
-
-    </div><!-- end content-padding -->
-  </div><!-- end container -->
+  </div>
 </body>
 </html>
